--- a/composer.json
+++ b/composer.json
@@ -7,14 +7,24 @@
         "php": ">=7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "almasaeed2010/adminlte": "~2.4",
+        "doctrine/annotations": "^1.13",
+        "kevinpapst/adminlte-bundle": "^3.0",
         "symfony/console": "5.3.*",
         "symfony/dotenv": "5.3.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.3.*",
         "symfony/runtime": "5.3.*",
-        "symfony/yaml": "5.3.*"
+        "symfony/security-bundle": "5.3.*",
+        "symfony/security-core": "5.3.*",
+        "symfony/twig-bundle": "5.3.*",
+        "symfony/webpack-encore-bundle": "^1.12",
+        "symfony/yaml": "5.3.*",
+        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/twig": "^3.3"
     },
     "require-dev": {
+        "symfony/maker-bundle": "^1.33"
     },
     "config": {
         "optimize-autoloader": true,
@@ -55,7 +65,7 @@
     },
     "extra": {
         "symfony": {
-            "allow-contrib": false,
+            "allow-contrib": "true",
             "require": "5.3.*"
         }
     }
