--- a/composer.json
+++ b/composer.json
@@ -56,7 +56,8 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
-        ]
+        ],
+        "heroku-postbuild" : "encore production"
     },
     "conflict": {
         "symfony/symfony": "*"
